logs/fats.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/FATS'...
Compiling './lib/python3.5/site-packages/FATS/Base.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (Base.py, line 5)
Compiling './lib/python3.5/site-packages/FATS/Feature.py'...
***   File "./lib/python3.5/site-packages/FATS/Feature.py", line 93
    print "Warning: the feature", name, "could not be calculated because", obj().Data, "are needed."
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/FATS/FeatureFunctionLib.py'...
***   File "./lib/python3.5/site-packages/FATS/FeatureFunctionLib.py", line 236
    print "error: please run SlottedA_length first to generate values for StetsonK_AC "
                                                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/FATS/lomb.py'...
***   File "./lib/python3.5/site-packages/FATS/lomb.py", line 51
    print 'factorial table too small in spread'
                                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/FATS-1.3.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
